--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -160,14 +160,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738480.md#1">美中期选举周二初选繁忙 七场选赛抢先看</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740441.md#1">纽约国会第10选区吸引民主党至少6人竞争</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740929.md#1">拜登启用《国防生产法》 加快婴儿奶粉生产</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740438.md#1">纽约新选区地图草案 给皇后区选举带来啥变化？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740083.md#1">美五州中期选举初选 五大关键点一文看懂</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739965.md#1">中共驻多国使馆通知 调整入境防疫限制</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740045.md#1">宾州初选竞争异常激烈 共和党参议员结果待定</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959300.md#1" target="_blank">文革中自杀的几个名人（4）史学家翦伯赞</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
