--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -160,14 +160,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738480.md#1">美中期选举周二初选繁忙 七场选赛抢先看</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740083.md#1">美五州中期选举初选 五大关键点一文看懂</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739965.md#1">中共驻多国使馆通知 调整入境防疫限制</a></li>
-<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740045.md#1">宾州初选竞争异常激烈 共和党参议员结果待定</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740441.md#1">纽约国会第10选区吸引民主党至少6人竞争</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740929.md#1">拜登启用《国防生产法》 加快婴儿奶粉生产</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740438.md#1">纽约新选区地图草案 给皇后区选举带来啥变化？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10232804.md#1" target="_blank">共产暴政录：精于绑票和洗劫的方志敏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/4/n9922246.md#1" target="_blank">林辉：文革冤案中周恩来的落井下石与冷酷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/8/n2455187.md#1" target="_blank">【热点互动】自焚 中共自导的梦魇(3)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
