--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
