--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489726.md#1" target="_blank">发生在两位西班牙人身上的奇迹</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
